--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS  -->
-        <link rel = "stylesheet" href = "/css/bootstrap.min.css">
+        <link rel = "stylesheet" href = "./css/bootstrap.min.css">
 
-        <title>Computer Science and Engineering | IIT Patna</title>
+        <title>Computer Science and Engineering|IIT Patna</title>
     </head>
 <body>
     <h1>
         Hello, world!
     </h1>
-    <script src = "/js/jquery-3.3.1.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+
+    <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                One of three columns
+              </div>
+              <div class="col-sm">
+                One of three columns
+              </div>
+              <div class="col-sm">
+                One of three columns
+              </div>
+            </div>
+          </div>
+          
+    <script src = "./js/jquery-3.3.1.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
