--- a/index.html
+++ b/index.html
@@ -7,29 +7,35 @@
 
         <!-- Bootstrap CSS  -->
         <link rel = "stylesheet" href = "./css/bootstrap.min.css">
+        <link rel = "stylesheet" href = "./css/styles.css">
 
         <title>Computer Science and Engineering|IIT Patna</title>
     </head>
 <body>
-    <h1>
-        Hello, world!
-    </h1>
-
-    <div class="container">
-            <div class="row">
-              <div class="col-sm">
-                One of three columns
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
+    <!-- <div class = "container-fluid top-bar">
+        <div class = "row">
+            <div class = "col iitp-name">
+                Indian Institute of Technology, Patna
             </div>
-          </div>
-          
+            <div class = "col-auto hindi">
+               हिन्दी
+            </div>
+        </div>
+    </div> -->
+    <div class = "container-fluid banner">
+        <div class = "row justify-content-center black-overlay align-items-center">
+            <div class="col">
+                <span class = "text1">Welcome To</span>
+                <br>
+                <span class = "text2">Computer Science and Engineering Department</span>
+                <br><br>
+                <span class = "text3">at Indian Institute of Technology, Patna</span>
+            </div>
+        </div>
+    </div>
+    
     <script src = "./js/jquery-3.3.1.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src = "./js/anime.min.js"></script>
 </body>
 </html>
