--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class = "scroll-down"></div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" hidden>
     <a class="navbar-brand" href="#">IIT Patna</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -83,6 +83,17 @@
                 <span class = "text3">at Indian Institute of Technology, Patna</span>
             </div>
         </div>
+    </div>
+    <div class = "scroll-down shift-to-left"></div>
+    <div class = "container-fluid quote">
+            <div class = "row black-overlay align-items-center text">
+                <div class="col align-text-right">
+                    <span class="quote-text-highlight">Shift</span> the <span class="quote-text-highlight">Ctrl</span>
+                    to us, we will <span class="quote-text-highlight">Alt</span> the world.
+                    <br>
+                    <small>~CSE@IITP</small>
+                </div>
+            </div>
     </div>
     
     <script src = "./js/jquery-3.3.1.js"></script>
