--- a/index.html
+++ b/index.html
@@ -9,24 +9,16 @@
         <link rel = "stylesheet" href = "./css/bootstrap.min.css">
         <link rel = "stylesheet" href = "./css/styles.css">
 
-        <title>Computer Science and Engineering|IIT Patna</title>
+        <title>Computer Science and Engineering | IIT Patna</title>
     </head>
 <body>
-    <!-- <div class = "container-fluid top-bar">
-        <div class = "row">
-            <div class = "col iitp-name">
-                Indian Institute of Technology, Patna
-            </div>
-            <div class = "col-auto hindi">
-               हिन्दी
-            </div>
-        </div>
-    </div> -->
-
     <div class = "scroll-down"></div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">CSE | IIT Patna</a>
+    <a class="navbar-brand" href="#">
+        <img src = "./img/logo.png" class = "navbar-logo">
+        CSE | IIT Patna
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -74,13 +66,19 @@
     </div>
     </nav>
     <div class = "container-fluid banner">
+        
         <div class = "row justify-content-center black-overlay align-items-center text">
+            
             <div class="col">
-                <span class = "text1">Welcome To</span>
-                <br>
-                <span class = "text2">Computer Science and Engineering Department</span>
+                <img src = "./img/logo.png"class = "banner-logo">
                 <br><br>
-                <span class = "text3">at Indian Institute of Technology, Patna</span>
+                <div class = "banner-animation">
+                    <span class = "text1">Welcome To</span>
+                    <br>
+                    <span class = "text2">Computer Science and Engineering Department</span>
+                    <br><br>
+                    <span class = "text3">Indian Institute of Technology, Patna</span>
+                </div>
             </div>
         </div>
     </div>
