Added home page description

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </div>
         </div>
     </div>
-    <div class = "scroll-down shift-to-left"></div>
+
     <div class = "container-fluid quote">
-            <div class = "row black-overlay align-items-center text">
-                <div class="col align-text-right">
+            <div class = "row align-items-center">
+                <div class="col align-text-right black-overlay">
                     <span class="quote-text-highlight">Shift</span> the <span class="quote-text-highlight">Ctrl</span>
                     to us, we will <span class="quote-text-highlight">Alt</span> the world.
                     <br>
@@ -93,7 +93,38 @@
                 </div>
             </div>
     </div>
-    
+    <div class = "container-fluid bg-light">
+        <div class = "row intro-description justify-content-center">
+            <div class = "col-lg-10">
+                    A journey to the global academic summit that touches every aspect of national 
+                    life in its wake, is 
+                    the primary goal of the CSE Department at IIT Patna. 
+                    The department came into existence in 2008 with miniscule faculty strength 
+                    and minute undergraduate student body. 
+                    This inadequacy was no deterrent to its bold decision to start the doctoral 
+                    program right away.
+                    <br>
+                    The department has not looked back since then. 
+                    It has witnessed a manifold raise in the size of the vibrant student body. 
+                    Presently, all efforts are geared towards making this the first choice of 
+                    aspiring undergraduates. This is being groomed to be the favored destination 
+                    for research scholars brimming with ideas. Faculty strength is all set to multiply 
+                    many times over with the planned addition of young and dynamic persons flashing 
+                    enviable academic and research records.
+                    <br>
+                    
+                    The department boasts of generously equipped teaching and research 
+                    laboratories. Doctoral candidates are liberally supported either by 
+                    scholarships or by sponsored fellowships. 
+                    <br>
+                    Sponsored research and developmental activities add muscle to the buzzing academics. 
+                    <br><br>
+                    Future beckons this young department.
+                    <br><br>
+                    Hail our first love!
+            </div>
+        </div>
+    </div>
     <script src = "./js/jquery-3.3.1.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src = "./js/anime.min.js"></script>
