Changed order of divs

--- a/index.html
+++ b/index.html
@@ -83,19 +83,13 @@
         </div>
     </div>
 
-    <div class = "container-fluid quote">
-            <div class = "row align-items-center">
-                <div class="col align-text-right black-overlay">
-                    <span class="quote-text-highlight">Shift</span> the <span class="quote-text-highlight">Ctrl</span>
-                    to us, we will <span class="quote-text-highlight">Alt</span> the world.
-                    <br>
-                    <small>~CSE@IITP</small>
-                </div>
-            </div>
-    </div>
+    
     <div class = "container-fluid bg-light">
         <div class = "row intro-description justify-content-center">
             <div class = "col-lg-10">
+                    <br>
+                    <h1>Our Story:</h1>
+                    <br>
                     A journey to the global academic summit that touches every aspect of national 
                     life in its wake, is 
                     the primary goal of the CSE Department at IIT Patna. 
@@ -122,12 +116,24 @@
                     Future beckons this young department.
                     <br><br>
                     Hail our first love!
+                    <br>
             </div>
         </div>
     </div>
+
+    <div class = "container-fluid quote">
+            <div class = "row align-items-center">
+                <div class="col align-text-right black-overlay">
+                    <span class="quote-text-highlight">Shift</span> the <span class="quote-text-highlight">Ctrl</span>
+                    to us, we will <span class="quote-text-highlight">Alt</span> the world.
+                </div>
+            </div>
+    </div>
+
     <script src = "./js/jquery-3.3.1.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src = "./js/anime.min.js"></script>
     <script src = "./js/introanim.js"></script>
+
 </body>
 </html>
