--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel = "stylesheet" href = "./css/styles.css">
 
         <title>Computer Science and Engineering | IIT Patna</title>
+        <link rel="shortcut icon" type="image/png" href="./img/logo.png"/>
+
     </head>
 <body>
     <div class = "scroll-down"></div>
@@ -115,8 +117,7 @@
                     <br><br>
                     Future beckons this young department.
                     <br><br>
-                    Hail our first love!
-                    <br>
+                    <h4>Hail our first love!</h4>
             </div>
         </div>
     </div>
