--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">
         <img src = "./img/logo.png" class = "navbar-logo">
-        CSE | IIT Patna
+        <span class = "navbar-title">
+            CSE | IIT Patna
+        </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -121,7 +123,31 @@
             </div>
         </div>
     </div>
-
+    <div class = "container-fluid home-news bg-light">
+        <div class = "row justify-content-center">
+            <div class="col-lg-10">
+                <br>
+                <h1>
+                    Latest News:
+                </h1>
+                <br>
+            </div>
+        </div>
+        <div class = "row justify-content-center">
+            <div class = "col-lg-10">
+                <ol>
+                    <li>
+                        Mr. Nilotpal Chakraborty, a research scholar in the department of CSE has been selected for Richard E. Merwin Student Scholarship.
+                    </li>
+                    <li>
+                        ACL Presidential Talk by Prof.Pushpak Bhattacharyya, FNAE
+                    </li>
+                    <li>
+                        "Anupam Das, fourth year CSE student, has been selected as the Google Android with CS facilitator. https://cswithandroid.withgoogle.com/                    </li>
+                </ol>
+            </div>
+        </div>
+    </div>
     <div class = "container-fluid quote">
             <div class = "row align-items-center">
                 <div class="col align-text-right black-overlay">
