Added See more link in Later News div

--- a/index.html
+++ b/index.html
@@ -123,17 +123,16 @@
             </div>
         </div>
     </div>
-    <div class = "container-fluid home-news bg-light">
-        <div class = "row justify-content-center">
+    <div class = "container-fluid bg-light">
+        <div class = "row justify-content-center home-news ">
             <div class="col-lg-10">
                 <br>
                 <h1>
                     Latest News:
                 </h1>
-                <br>
             </div>
         </div>
-        <div class = "row justify-content-center">
+        <div class = "row justify-content-center home-news ">
             <div class = "col-lg-10">
                 <ol>
                     <li>
@@ -145,6 +144,11 @@
                     <li>
                         "Anupam Das, fourth year CSE student, has been selected as the Google Android with CS facilitator. https://cswithandroid.withgoogle.com/                    </li>
                 </ol>
+            </div>
+        </div>
+        <div class="row justify-content-end">
+            <div class="col-auto">
+                <a href="#">See more here...</a>
             </div>
         </div>
     </div>
