--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand" href="#">
         <img src = "./img/logo.png" class = "navbar-logo">
         <span class = "navbar-title">
-            CSE | IIT Patna
+            CSE | IITP
         </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,7 +142,7 @@
                         ACL Presidential Talk by Prof.Pushpak Bhattacharyya, FNAE
                     </li>
                     <li>
-                        "Anupam Das, fourth year CSE student, has been selected as the Google Android with CS facilitator. https://cswithandroid.withgoogle.com/                    </li>
+                        "Anupam Das, fourth year CSE student, has been selected as the Google Android with CS facilitator.</li>
                 </ol>
             </div>
         </div>
@@ -160,7 +160,37 @@
                 </div>
             </div>
     </div>
-
+    <div class="container-fluid footer">
+        <div class="row align-items-center align-text-center">
+            <div class = "col-lg">
+                <br>
+                <span class = "footer-heading">Visit us at:</span>
+                <br>
+                <br>
+                Indian Institute of Technology Patna
+                <br>
+                Bihta - 801103, Patna
+                <br>
+                Bihar, India
+                <br><br>
+            </div>
+            <div class="col-lg">
+                <span class = "footer-heading">Talk to us at:</span>
+                <br>
+                <br>
+                cse_off[AT]iitp.ac.in
+                <br>
+                +91 612 302 8337
+                <br>
+                <br>
+            </div>
+        </div>
+        <div class = "row align-items-center align-text-center">
+            <div class = "col">
+                Made with ♡ by Amish Mittal.
+            </div>
+        </div>
+    </div>
     <script src = "./js/jquery-3.3.1.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src = "./js/anime.min.js"></script>
