--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
         <div class = "row align-items-center align-text-center">
             <div class = "col">
-                Made with ♡ by Amish Mittal.
+                Website made with ♡ by Amish Mittal.
             </div>
         </div>
     </div>
