Added table in student columns

--- a/ug_stud.html
+++ b/ug_stud.html
@@ -82,6 +82,7 @@
                     <h1>
                         Undergraduate Students
                     </h1>
+                    <br>
                 </div>
             </div>
     </div>
@@ -101,7 +102,32 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
-                    1801CS07 - Amish Mittal
+                    <table class = "table">
+                        <thead>
+                            <tr>
+                                <th scope = "col">Roll no</th>
+                                <th scope = "col">Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1801CS07</td>
+                                <td>Amish Mittal</td>
+                            </tr>
+                            <tr>
+                                <td>1801CS07</td>
+                                <td>Amish Mittal</td>
+                            </tr>
+                            <tr>
+                                <td>1801CS07</td>
+                                <td>Amish Mittal</td>
+                            </tr>
+                            <tr>
+                                <td>1801CS07</td>
+                                <td>Amish Mittal</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
