--- a/ug_stud.html
+++ b/ug_stud.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">Intro<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Intro<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Courses</a>
@@ -43,7 +43,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Faculty</a>
             <a class="dropdown-item" href="#">Staff</a>
-            <a class="dropdown-item" href="#">UG Students</a>
+            <a class="dropdown-item" href="ug_stud.html">UG Students</a>
             <a class="dropdown-item" href="#">PG Students</a>
             <a class="dropdown-item" href="#">PhD Students</a>
             </div>
