Completed callforpapers.html

--- a/icdse/callforpapers.html
+++ b/icdse/callforpapers.html
@@ -63,52 +63,115 @@
         <div class = "row intro-description justify-content-center">
             <div class = "col-lg-10">
                     <br>
-                    <h1>Call for Papers</h1>
+                    <h1>
+                        <b>
+                            Call for Papers
+                        </b>
+                    </h1>
                     <br>
-                    The objective of the International Conference on Data Science and Engineering (ICDSE 2019)is to provide a congenial yet serious platform for experts from academia and industry to interact with young researchers in Data Science and Engineering. This is an interdisciplinary conference that aims at diverse fields of Science, engineering and technology with a focus on data analytics and smart systems design and development. The major attempt of the conference is to bring out this event to be a forum for researchers and practitioners to come together from all different fields of study such as Mechanical, Electrical, Environmental, Chemical, Electronics and Computer Engineering to foster the needs of data processing in modern human life. ICDSE 2019 welcomes submissions that have not been published and that are not under review by another conference or journal. All submissions will be evaluated on their originality, technical soundness, significance, presentation, and interest to the conference attendees. Paper Submission All full papers submitted will be subjected to a review process through an international review panel. Comments of the reviewers will be directed to the authors prior to the Camera Ready Paper Submission deadline so that they can be accommodated in the camera ready papers. The Full paper format is IEEE style. Submissions should not exceed 6 pages and should be formated in the standard template available at conference website For publication in the proceedings, the Conference Committee must have received the following, before the deadline for camera ready paper submission. All submissions (PDF format) can be submitted through the Easychair papers submission system. Authors are cordially invited to submit unpublished and original work through on line Easy Chair paper submission process (https://easychair.org/conferences/?conf=icdse2019) on or before Jan 30th, 2019 based upon the following topics. 
-                    We invite all the prospective authors to submit original and high quality papers out of the following topics/tracks but not limited to. 
-                    Conference Tracks:
-                    Algorithms for Large Data Sets 
-                    Business Intelligence
-                    Cluster, Cloud, & Grid Computing
-                    Crowd Sourcing & Social Intelligence
-                    Computational Biology & Bioinformatics
-                    Data Centric Programming
-                    Data Modeling & Semantic Engineering
-                    Data, Text, Web Mining, & Visualization
-                    Deep Learning
-                    Domain Specific Data Management
-                    High Performance Scientific/Engineering/ Commercial Applications
-                    Interoperability & Data Integration using Open Standards
-                    Infoscience & Computational Informatics
-                    Information Discovery & Query processing
-                    Information Network Analytics
-                    Knowledge based Software Engineering
-                    Knowledge Engineering
-                    Machine Learning & Natural Language Computing
-                    Management of Very Large Data Systems
-                    Peer-to-Peer Algorithms & Networks
-                    Statistical Computing
+                    The objective of the International Conference on Data Science and 
+                    Engineering (ICDSE 2019)is to provide a congenial yet serious 
+                    platform for experts from academia and industry to interact with 
+                    young researchers in Data Science and Engineering. This is an 
+                    interdisciplinary conference that aims at diverse fields of Science, 
+                    engineering and technology with a focus on data analytics and smart 
+                    systems design and development. The major attempt of the conference 
+                    is to bring out this event to be a forum for researchers and practitioners 
+                    to come together from all different fields of study such as Mechanical
+                    , Electrical, Environmental, Chemical, Electronics and Computer 
+                    Engineering to foster the needs of data processing in modern human
+                    life. ICDSE 2019 welcomes submissions that have not been published
+                    and that are not under review by another conference or journal. 
+                    All submissions will be evaluated on their originality, technical
+                    soundness, significance, presentation, and interest to the 
+                    conference attendees. Paper Submission All full papers 
+                    submitted will be subjected to a review process through 
+                    an international review panel. Comments of the reviewers
+                    will be directed to the authors prior to the Camera Ready 
+                    Paper Submission deadline so that they can be accommodated 
+                    in the camera ready papers. The Full paper format is IEEE 
+                    style. Submissions should not exceed 6 pages and should be 
+                    formated in the standard template available at conference 
+                    website For publication in the proceedings, the Conference 
+                    Committee must have received the following, before the deadline
+                    for camera ready paper submission. All submissions (PDF format)
+                    can be submitted through the Easychair papers submission 
+                    system. Authors are cordially invited to submit unpublished 
+                    and original work through on line Easy Chair paper submission
+                    process (https://easychair.org/conferences/?conf=icdse2019)
+                    on or before Jan 30th, 2019 based upon the following topics.
+                    <br><br>
+                    We invite all the prospective authors to submit original and high
+                    quality papers out of the following topics/tracks but not limited to. 
+                    <br>
+                    <br>
+                    <h4><b>Conference Tracks:</b></h4>
+                    Algorithms for Large Data Sets <br>
+                    Business Intelligence<br>
+                    Cluster, Cloud, & Grid Computing<br>
+                    Crowd Sourcing & Social Intelligence<br>
+                    Computational Biology & Bioinformatics<br>
+                    Data Centric Programming<br>
+                    Data Modeling & Semantic Engineering<br>
+                    Data, Text, Web Mining, & Visualization<br>
+                    Deep Learning<br>
+                    Domain Specific Data Management<br>
+                    High Performance Scientific/Engineering/ Commercial Applications<br>
+                    Interoperability & Data Integration using Open Standards<br>
+                    Infoscience & Computational Informatics<br>
+                    Information Discovery & Query processing<br>
+                    Information Network Analytics<br>
+                    Knowledge based Software Engineering<br>
+                    Knowledge Engineering<br>
+                    Machine Learning & Natural Language Computing<br>
+                    Management of Very Large Data Systems<br>
+                    Peer-to-Peer Algorithms & Networks<br>
+                    Statistical Computing<br>
                     Web Engineering
-
-                    The theme chosen by ICDSE 2019 for this year’s conference is “Data, Devices, Decisions for a Digital World”. 
-                    All the submitted full papers will be peer reviewed by technical committee of the conference. Review Process, Publication and Indexing: The conference aims at carrying out two rounds of review process. In the first round, the papers submitted by the authors will be assessed on the basis of their technical suitability, scope of work and plagiarism. The corresponding authors of qualifying submissions will be intimated for their papers to be double blind reviewed by three experts on the basis of originality, novelty, clarity, completeness, relevance, significance and research contribution We look forward to your contributions in the international conference.
-                    Doctoral Symposium:
-                    PhD students in the above and related areas will have the opportunity to present their research work and interact with experienced researchers from academia, industry and research labs. 
-
-                    IMPORTANT DATES:
-                    ----------------------------------------------- 
-                    Paper Submission Deadline: 30th January, 2019 
-                    Notifications to Authors: 31st March, 2019 
-                    Camera-Ready Papers Due: 15th April, 2019 
-                    Author Registration: 1st May, 2019 
-                    ICSCC 2019 Conference: 14–15, July 2019. 
-
-
-                    Submission:
-                    ----------------------------------------------- 
-                    Technical papers describing original, previously unpublished papers are solicited in all areas described above. Authors are invited to submit papers through Easy chair Conference Management System. 
-                    Submission link: https://easychair.org/conferences/?conf=icdse219
+                    <br><br>
+                    <h5>
+                        <b>
+                            The theme chosen by ICDSE 2019 for this year’s conference is 
+                            “Data, Devices, Decisions for a Digital World”. 
+                        </b>
+                    </h5>
+                    All the submitted full papers will be peer reviewed by technical 
+                    committee of the conference. Review Process, Publication and 
+                    Indexing: The conference aims at carrying out two rounds of 
+                    review process. In the first round, the papers submitted by the 
+                    authors will be assessed on the basis of their technical suitability, 
+                    scope of work and plagiarism. The corresponding authors of 
+                    qualifying submissions will be intimated for their papers 
+                    to be double blind reviewed by three experts on the basis 
+                    of originality, novelty, clarity, completeness, relevance, 
+                    significance and research contribution We look forward to 
+                    your contributions in the international conference.
+                    <br><br>
+                    <h4>
+                        <b>Doctoral Symposium:</b>
+                    </h4>
+                    PhD students in the above and related areas will have the 
+                    opportunity to present their research work and interact with 
+                    experienced researchers from academia, industry and research labs. 
+                    <br><br>
+                    <b>
+                        IMPORTANT DATES:<br>
+                        ----------------------------------------------- <br>
+                        Paper Submission Deadline: 30th January, 2019 <br>
+                        Notifications to Authors: 31st March, 2019 <br>
+                        Camera-Ready Papers Due: 15th April, 2019 <br>
+                        Author Registration: 1st May, 2019 <br>
+                        ICSCC 2019 Conference: 14–15, July 2019. <br>
+                        <br><br>
+                        SUBMISSION:<br>
+                        ----------------------------------------------- <br>
+                        Technical papers describing original, previously unpublished papers 
+                        are solicited in all areas described above. Authors are invited to 
+                        submit papers through Easy chair Conference Management System.
+                        <br><br>
+                        Submission link: https://easychair.org/conferences/?conf=icdse219
+                        <br>
+                    </b>
                     <br>
                     <br>
             </div>
