--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel = "stylesheet" href = "./css/styles.css">
 
         <title>Computer Science and Engineering | IIT Patna</title>
-        <link rel="shortcut icon" type="image/png" href="./img/logo.png"/>
+        <link rel="shortcut icon" type="image/png" href="./img/logo2.png"/>
 
     </head>
 <body>
@@ -74,7 +74,7 @@
         <div class = "row justify-content-center black-overlay align-items-center text">
             
             <div class="col">
-                <img src = "./img/logo.png"class = "banner-logo">
+                <img src = "./img/logo2.png"class = "banner-logo">
                 <br><br>
                 <div class = "banner-animation">
                     <span class = "text1">Welcome To</span>
