--- a/index.html
+++ b/index.html
@@ -161,7 +161,20 @@
             </div>
     </div>
     <div class="container-fluid footer">
+        <div class = "row">
+            <div class = "col">
+                
+            </div>
+        </div>
+        <div class ="row justify-content-center">
+            <div class = "col-10">
+                    <iframe width="100%" height="200" frameborder="0" 
+                    style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Computer%20Science%20Department%2C%20IIT%20Patna&key=AIzaSyAqiVbuzuEstd-4c0yC7HmlMUFk4Zsqxh0&maptype=satellite&zoom=17" 
+                    allowfullscreen></iframe>
+            </div>
+        </div>
         <div class="row align-items-center align-text-center">
+                
             <div class = "col-lg">
                 <br>
                 <span class = "footer-heading">Visit us at:</span>
