--- a/ug_stud.html
+++ b/ug_stud.html
@@ -149,36 +149,49 @@
 
 
     <div class="container-fluid footer">
-        <div class="row align-items-center align-text-center">
-            <div class = "col-lg">
-                <br>
-                <span class = "footer-heading">Visit us at:</span>
-                <br>
-                <br>
-                Indian Institute of Technology Patna
-                <br>
-                Bihta - 801103, Patna
-                <br>
-                Bihar, India
-                <br><br>
+            <div class = "row">
+                <div class = "col">
+                    
+                </div>
             </div>
-            <div class="col-lg">
-                <span class = "footer-heading">Talk to us at:</span>
-                <br>
-                <br>
-                cse_off[AT]iitp.ac.in
-                <br>
-                +91 612 302 8337
-                <br>
-                <br>
+            <div class ="row justify-content-center">
+                <div class = "col-10">
+                        <iframe width="100%" height="200" frameborder="0" 
+                        style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Computer%20Science%20Department%2C%20IIT%20Patna&key=AIzaSyAqiVbuzuEstd-4c0yC7HmlMUFk4Zsqxh0&maptype=satellite&zoom=17" 
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row align-items-center align-text-center">
+                    
+                <div class = "col-lg">
+                    <br>
+                    <span class = "footer-heading">Visit us at:</span>
+                    <br>
+                    <br>
+                    Indian Institute of Technology Patna
+                    <br>
+                    Bihta - 801103, Patna
+                    <br>
+                    Bihar, India
+                    <br><br>
+                </div>
+                <div class="col-lg">
+                    <span class = "footer-heading">Talk to us at:</span>
+                    <br>
+                    <br>
+                    cse_off[AT]iitp.ac.in
+                    <br>
+                    +91 612 302 8337
+                    <br>
+                    <br>
+                </div>
+            </div>
+            <div class = "row align-items-center align-text-center">
+                <div class = "col">
+                    Website made with ♡ by Amish Mittal.
+                </div>
             </div>
         </div>
-        <div class = "row align-items-center align-text-center">
-            <div class = "col">
-                Website made with ♡ by Amish Mittal.
-            </div>
-        </div>
-    </div>
 
 
 
