Added Custom Search Engine

--- a/index.html
+++ b/index.html
@@ -63,10 +63,28 @@
                 <a class="nav-link" href="#">Directory</a>
         </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+
+
+
+        <!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2 search-bar-css-override" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
+
+
+        <script>
+            (function() {
+                var cx = '013851667789533784158:u2twokopmtc';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+            })();
+        </script>
+        <gcse:search></gcse:search>
+
     </div>
     </nav>
     <div class = "container-fluid banner">
@@ -163,7 +181,7 @@
     <div class="container-fluid footer">
         <div class = "row">
             <div class = "col">
-                
+
             </div>
         </div>
         <div class ="row justify-content-center">
