--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="#">News</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="#">Directory</a>
+                <a class="nav-link" href="directory.html">Directory</a>
         </li>
         </ul>
 
