Updated favicon and added hover effect to tables

--- a/directory.html
+++ b/directory.html
@@ -11,7 +11,7 @@
 
 
         <title>Computer Science and Engineering | IIT Patna</title>
-        <link rel="shortcut icon" type="image/png" href="./img/logo.png"/>
+        <link rel="shortcut icon" type="image/png" href="./img/logo2.png"/>
 
 
     </head>
@@ -103,8 +103,8 @@
     <div class = "container bg-light">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <table class = "table" id = "facdata">
-                    <thead>
+                <table class = "table table-hover " id = "facdata">
+                    <thead class ="thead-dark">
                         <tr>
                             <th scope = "col">Name</th>
                             <th scope = "col">Designation</th>
@@ -139,8 +139,8 @@
     <div class = "container bg-light">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <table class = "table" id = "staffdata">
-                    <thead>
+                <table class = "table table-hover" id = "staffdata">
+                    <thead class = "thead-dark">
                         <tr>
                             <th scope = "col">Name</th>
                             <th scope = "col">Designation</th>
@@ -175,8 +175,8 @@
     <div class = "container bg-light">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <table class = "table" id = "labdata">
-                    <thead>
+                <table class = "table table-hover" id = "labdata">
+                    <thead class = "thead-dark">
                         <tr>
                             <th scope = "col">Name</th>
                             <th scope = "col">Phone Extension</th>
