--- a/ug_stud.html
+++ b/ug_stud.html
@@ -11,7 +11,7 @@
 
 
         <title>Computer Science and Engineering | IIT Patna</title>
-        <link rel="shortcut icon" type="image/png" href="./img/logo.png"/>
+        <link rel="shortcut icon" type="image/png" href="./img/logo2.png"/>
 
 
     </head>
@@ -130,8 +130,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
-                    <table class = "table" id = "userdata">
-                        <thead>
+                    <table class = "table table-hover" id = "userdata">
+                        <thead class = "thead-dark">
                             <tr>
                                 <th scope = "col">Roll no</th>
                                 <th scope = "col">Name</th>
