--- a/directory.html
+++ b/directory.html
@@ -38,7 +38,7 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Courses</a>
         </li>
-        <li class="nav-item dropdown active">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             People
             </a>
@@ -62,7 +62,7 @@
         <li class="nav-item">
                 <a class="nav-link" href="#">News</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
                 <a class="nav-link" href="#">Directory</a>
         </li>
         </ul>
