--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="#">Research</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="#">Facilities</a>
+                <a class="nav-link" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item">
                 <a class="nav-link" href="#">Awards</a>
