--- a/facilities.html
+++ b/facilities.html
@@ -481,7 +481,7 @@
                                             <p><strong>IBM e Serve Blade center Classis with 2 x 2320w PSU</strong></p>
                                             </td>
                                             <td>
-                                            <p style= text-align: center;"><strong>1</strong></p>
+                                            <p style= "text-align: center;"><strong>1</strong></p>
                                             </td>
                                             </tr>
                                             <tr>
