--- a/courses.html
+++ b/courses.html
@@ -99,10 +99,10 @@
             <div class="col-12 col-lg-12">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                      <a class="nav-link active" id="course-tab" data-toggle="tab" href="#course" role="tab" aria-controls="course" aria-selected="true">Courses</a>
+                      <a class="nav-link" id="course-tab" data-toggle="tab" href="#course" role="tab" aria-controls="course" aria-selected="false">Courses</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" id="curriculum-tab" data-toggle="tab" href="#curriculum" role="tab" aria-controls="curriculum" aria-selected="false">Curriculum</a>
+                      <a class="nav-link active" id="curriculum-tab" data-toggle="tab" href="#curriculum" role="tab" aria-controls="curriculum" aria-selected="true">Curriculum</a>
                     </li>
                   </ul>
                   <div class="tab-content" id="myTabContent">
@@ -111,7 +111,7 @@
 
                     <!-- Course Tab content -->
 
-                    <div class="tab-pane fade show active" id="course" role="tabpanel" aria-labelledby="course-tab">
+                    <div class="tab-pane fade" id="course" role="tabpanel" aria-labelledby="course-tab">
 
                         <table class="table table-hover">
                             <caption>Click on a course for more information</caption>
@@ -316,10 +316,14 @@
 
 
 
-                    <div class="tab-pane fade" id="curriculum" role="tabpanel" aria-labelledby="curriculum-tab">
-
-
-
+                    <div class="tab-pane show active fade" id="curriculum" role="tabpanel" aria-labelledby="curriculum-tab">
+                        <br>
+                        <ul>
+                            <li><p>B.Tech in Computer Science and Engineering: <a href="pdf/B.Tech curriculum.pdf">Click here</a></p></li>
+                            <li><p>M.Tech in Computer Science and Engineering: <a href="pdf/MTech curriculum.pdf">Click here</a></p></li>
+                            <li><p>PhD: <a href="https://www.iitp.ac.in/acad/phd_prog.php">Click here</a></p></li>
+                        </ul>
+                        
 
 
 
