--- a/courses.html
+++ b/courses.html
@@ -91,6 +91,11 @@
             </div>
     </div>
 
+    <style>
+        tr{
+            cursor: pointer;
+        }
+    </style>
 
 
 
@@ -114,7 +119,7 @@
                     <div class="tab-pane fade" id="course" role="tabpanel" aria-labelledby="course-tab">
 
                         <table class="table table-hover">
-                            <caption>Click on a course for more information</caption>
+                            <caption>Click on a course for more information. More would be updated later.</caption>
                             <thead>
                               <tr>
                                 <th scope="col">Code</th>
