Updated and corrected links

--- a/facilities.html
+++ b/facilities.html
@@ -40,31 +40,31 @@
             <a class="nav-link" href="index.html">Intro<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="courses.html">Courses</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             People
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Faculty</a>
-            <a class="dropdown-item" href="#">Staff</a>
+            <a class="dropdown-item" href="faculty.html">Faculty</a>
+            <a class="dropdown-item" href="staff.html">Staff</a>
             <a class="dropdown-item" href="ug_stud.html">UG Students</a>
-            <a class="dropdown-item" href="#">PG Students</a>
-            <a class="dropdown-item" href="#">PhD Students</a>
+            <a class="dropdown-item" href="pg_stud.html">PG Students</a>
+            <a class="dropdown-item" href="phd_stud.html">PhD Students</a>
             </div>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="#">Research</a>
+                <a class="nav-link" href="research.html">Research</a>
         </li>
         <li class="nav-item active">
                 <a class="nav-link" href="facilities.html">Facilities</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="#">Awards</a>
+                <a class="nav-link" href="awards.html">Awards</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="#">News</a>
+                <a class="nav-link" href="news.html">News</a>
         </li>
         <li class="nav-item">
                 <a class="nav-link" href="directory.html">Directory</a>
